Perkin-UAT/force-app/main/default/objects/Field_Inventory_Item__c/Field_Inventory_Item__c.object-meta.xml
<CustomObject>
    <label>Field Inventory Item</label>
    <nameField>
        <label>Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Field Inventory Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>