Perkin-UAT/force-app/main/default/objects/Field_Inventory_Item__c/fields/AgeItem__c.field-meta.xml
<CustomField>
    <fullName>AgeItem__c</fullName>
    <formula>(today()- Date_Received__c )/30</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age (mo)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>