Perkin-UAT/force-app/main/default/objects/Field_Inventory_Item__c/fields/Asset_Number__c.field-meta.xml
<CustomField>
    <fullName>Asset_Number__c</fullName>
    <label>Asset Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>