Perkin-UAT/force-app/main/default/objects/Field_Inventory_Item__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup for Contacts</description>
    <label>Contact Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Field Inventory Items</relationshipLabel>
    <relationshipName>Field_Inventory_Items</relationshipName>
    <type>Lookup</type>
</CustomField>