Perkin-UAT/force-app/main/default/objects/Field_Inventory_Item__c/fields/Extended_Cost__c.field-meta.xml
<CustomField>
    <fullName>Extended_Cost__c</fullName>
    <formula>Quantity__c * UnitCost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Extended Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>