Perkin-UAT/force-app/main/default/objects/Field_Inventory_Item__c/fields/IGOR_Class__c.field-meta.xml
<CustomField>
    <fullName>IGOR_Class__c</fullName>
    <label>IGOR Class</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Instrument</fullName>
            </value>
            <value>
                <fullName>Major Accessory</fullName>
            </value>
            <value>
                <fullName>Minor Accessory</fullName>
            </value>
            <value>
                <fullName>Consumable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>