Perkin-UAT/force-app/main/default/objects/Field_Inventory_Item__c/fields/Integrated_Item__c.field-meta.xml
<CustomField>
    <fullName>Integrated_Item__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Integrated Item</label>
    <type>Checkbox</type>
</CustomField>