Perkin-UAT/force-app/main/default/objects/Field_Inventory_Item__c/fields/Inventory__c.field-meta.xml
<CustomField>
    <fullName>Inventory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inventory</label>
    <referenceTo>Field_Inventory__c</referenceTo>
    <relationshipLabel>Field Inventory Items</relationshipLabel>
    <relationshipName>Field_Inventory_Item</relationshipName>
    <type>Lookup</type>
</CustomField>