Perkin-UAT/force-app/main/default/objects/Field_Inventory_Item__c/fields/List_price__c.field-meta.xml
<CustomField>
    <fullName>List_price__c</fullName>
    <label>List Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>