Perkin-UAT/force-app/main/default/objects/Field_Inventory_Item__c/fields/Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Product_Line__c</fullName>
    <label>Product Line</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>01-AA</fullName>
            </value>
            <value>
                <fullName>02-ICP</fullName>
            </value>
            <value>
                <fullName>03-MAS</fullName>
            </value>
            <value>
                <fullName>04-GC</fullName>
            </value>
            <value>
                <fullName>05-TEA</fullName>
            </value>
            <value>
                <fullName>06-HTS</fullName>
            </value>
            <value>
                <fullName>07-CSA</fullName>
            </value>
            <value>
                <fullName>08-MLD</fullName>
            </value>
            <value>
                <fullName>09-RRD</fullName>
            </value>
            <value>
                <fullName>10-RRS</fullName>
            </value>
            <value>
                <fullName>11-AWS</fullName>
            </value>
            <value>
                <fullName>12-SPS</fullName>
            </value>
            <value>
                <fullName>15-LVI</fullName>
            </value>
            <value>
                <fullName>13-APS</fullName>
            </value>
            <value>
                <fullName>14-ANP</fullName>
            </value>
            <value>
                <fullName>16-FGP</fullName>
            </value>
            <value>
                <fullName>17-IR</fullName>
            </value>
            <value>
                <fullName>18-UVS</fullName>
            </value>
            <value>
                <fullName>19-LC</fullName>
            </value>
            <value>
                <fullName>20-ESS</fullName>
            </value>
            <value>
                <fullName>21-NEO</fullName>
            </value>
            <value>
                <fullName>22-PRE</fullName>
            </value>
            <value>
                <fullName>23-DIA</fullName>
            </value>
            <value>
                <fullName>24-SYN</fullName>
            </value>
            <value>
                <fullName>25-RS</fullName>
            </value>
            <value>
                <fullName>26-ISCO</fullName>
            </value>
            <value>
                <fullName>27-UIC</fullName>
            </value>
            <value>
                <fullName>28-RADO</fullName>
            </value>
            <value>
                <fullName>29-DIS</fullName>
            </value>
            <value>
                <fullName>32-HCS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>