Perkin-UAT/force-app/main/default/objects/Field_Inventory_Item__c/fields/UnitCost__c.field-meta.xml
<CustomField>
    <fullName>UnitCost__c</fullName>
    <label>Unit Cost</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>